--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
       with:
         channel: 'stable'
     - run: flutter pub get
-    - run: dart format -o show -l 200 --set-exit-if-changed .
+    - run: dart format -l 200 --set-exit-if-changed .
     - run: flutter analyze --no-pub --no-congratulate
