--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  foramtting_and_static_analysis:
+  formatting_and_static_analysis:
     name: Formatting and static analysis
     runs-on: ubuntu-latest
     steps:
@@ -23,3 +23,4 @@ jobs:
     - run: flutter pub get
     - run: dart format -l 200 --set-exit-if-changed .
     - run: flutter analyze --no-pub --no-congratulate
+    - run: flutter test
