--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: prototype_constrained_box
 description: A ConstrainedBox-like widget, but the constraints are given by another widget.
-version: 2.0.0+1
+version: 2.0.1
 repository: https://github.com/mateusfccp/prototype_constrained_box
 issue_tracker: https://github.com/mateusfccp/prototype_constrained_box/issues
 
@@ -12,6 +12,6 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
